tests/flow_errors/connector_bad_with/error.txt
Error: 
    8 |   create connector fake from snot_badger
    9 |   with
   10 |     nope = "yes"
      |     ^^^^ `with` parameter "nope" does not correspond to an argument in the target definition "fake"
      |          NOTE: The definition of "fake" does not expose any args. Remove this `with`.
   11 |   end;
   12 | end;
